@@ -1,3 +1,12 @@
+2011-07-16  Daniel Bates  <dbates@webkit.org>
+
+        Attempt to fix the Qt Linux Release build after changeset <http://trac.webkit.org/changeset/91097>
+        (https://bugs.webkit.org/show_bug.cgi?id=64615).
+
+        * UIProcess/qt/QtWebPageProxy.cpp:
+        (QtWebPageProxy::setCursorHiddenUntilMouseMoves): Added stub method.
+        * UIProcess/qt/QtWebPageProxy.h:
+
 2011-07-15  Pratik Solanki  <psolanki@apple.com>
 
         Part of https://bugs.webkit.org/show_bug.cgi?id=63674
